add_subdirectory(QormEntityMapperTest)
add_subdirectory(QormMetaEntityTest)
add_subdirectory(QormDatabaseSettingsTest)
add_subdirectory(QormSessionSqliteIT)
add_subdirectory(QormSessionFirebirdIT)

set_property(TARGET QormEntityMapperTest PROPERTY FOLDER "tests")
set_property(TARGET QormMetaEntityTest PROPERTY FOLDER "tests")
set_property(TARGET QormDatabaseSettingsTest PROPERTY FOLDER "tests")
set_property(TARGET QormSessionSqliteIT PROPERTY FOLDER "tests")
set_property(TARGET QormSessionFirebirdIT PROPERTY FOLDER "tests")